Use Java 21 and patch files using preview features (#53)
* Move back to JDK-21, since Java 24 is not LTS

Signed-off-by: Gulshan <kumargu@amazon.com>

* Patch files to remove preview flags

Signed-off-by: Gulshan <kumargu@amazon.com>

* Move CI to Java 24

Signed-off-by: Gulshan <kumargu@amazon.com>

* Fix internal cluster tests

Signed-off-by: Gulshan <kumargu@amazon.com>

* Update docs

Signed-off-by: Gulshan <kumargu@amazon.com>

---------

Signed-off-by: Gulshan <kumargu@amazon.com>